created questions file

--- a/templates/index.html
+++ b/templates/index.html
@@ -12,9 +12,13 @@
 
 <h2>Here are your 5 questions:</h2>
 
-<div>
+<form action="/results" method="POST">
     <ol>
-        <li>QUESTION 1</li>
+        {% for i in q %}
+            <li>{{i[0]}}</li>
+            {% for j in }
+
+
         <li>QUESTION 2</li>
         <li>QUESTION 3</li>
         <li>QUESTION 4</li>
