amended login, quiz and results pages

--- a/templates/login.html
+++ b/templates/login.html
@@ -1,23 +1,20 @@
 {% extends 'base.html' %}
  
 {% block head %}
-<Title>Login to test</Title>
+<Title>Login to quiz</Title>
 {% endblock %}
 
 {% block body %}
 <div>
     <h1>Welcome to Mark's quirky quiz!</h1>
 </div>
-<div id="login">
-    <form class="container" action="quiz.html">
-        <input type="text" name="" id="username" placeholder="Please enter username" required><br><br>
-        <input type="text" name="" id="password" placeholder="Please enter password" required><br><br>
-        <input type="submit" onclick="login()" value="Login and go to Quiz" name="submit"/><br>
-        <label id-="message"></label>    
+<div>
+    <form action="/quiz" method="POST">
+        <label for="password">Please type password here to login</label><br><br>
+        <input type="password" id="password" name="password" placeholder="Enter password"
+        />
+        <button type="submit">Submit</button> 
     </form>
 </div> 
-<div>
-    <a href="leaderboard.html" class="container">Current Leaderboard</a> 
-</div>
 
 {% endblock %}
