--- a/templates/results.html
+++ b/templates/results.html
@@ -8,15 +8,15 @@
 
 
 <h1>You scored {}/5</h1>
+
 <p>Low score (1/5-2/5)<br>
-    <img src="/gifs/low score.gif" alt="Homer seeking shelter from the world"/>
+    <img src="{{url_for('static', filename='low_score.gif')}}"/>
 </p>
 <p>Medium score (3/5)<br>
-    <img src="/gifs/middling score.gif" alt="Larry doing his thing"/><br>
+    <img src="{{url_for('static', filename='middling_score.gif')}}"/>
 </p>
 <p>High score (4/5-5/5)<br>
-    <img src="/gifs/high score.gif" width = "500" alt="Dr Bean has delivered the goods"/><br>
-    </p>
+    <img src="{{url_for('static', filename='high_score.gif')}}"/>
 
 <h2>Current leaderboard</h2>
 <Table>
