--- a/templates/login.html
+++ b/templates/login.html
@@ -11,7 +11,7 @@
 <div>
     <form action="/quiz" method="POST">
         <label for="password">Please type password here to login</label><br><br>
-        <input type="password" id="password" name="password" placeholder="Enter password"
+        <input type="password" id="password" name="password" value="password" placeholder="Enter password"
         />
         <button type="submit">Submit</button> 
     </form>
