--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -9,8 +9,8 @@
 {% block body %}
 <div class="container">
   
-<h1>Welcome to Mark's astoundingly terrific quiz!</h1>
-<h2>Here are your {{num_questions}} questions:</h2>
+<h1>Welcome to Mark's quiz!</h1>
+<h2>You have {{num_questions}} questions:</h2>
 </div>
 
 <div>
@@ -19,7 +19,7 @@
         {% for item in selected_quiz %}
             <li>{{item.question}}</li><br>
             {% for option in item.options %}
-            <input type="radio" id="{{option}}" name = "{{item.q_id}}" value="{{option}}">{{option}}<br><br>
+            <input type="radio" id="{{option}}" name = "{{item.q_id}}" value="{{option}}" required>{{option}}<br><br>
             {% endfor %}
         {% endfor %}
     </ol>
