configured and rendered leaderboard database

--- a/templates/login.html
+++ b/templates/login.html
@@ -6,11 +6,11 @@
 
 {% block body %}
 <div>
-    <h1>Welcome to Mark's quirky quiz!</h1>
+    <h1>LOGIN</h1>
 </div>
 <div>
     <form action="/quiz" method="POST">
-        <label for="password">Please type password here to login</label><br><br>
+        <label for="password">Please type password below to login in quiz</label><br><br>
         <input type="password" id="password" name="password" value="password" placeholder="Enter password"
         />
         <button type="submit">Submit</button> 
