--- a/templates/quiz.html
+++ b/templates/quiz.html
@@ -2,14 +2,14 @@
 
 {% block head %}
 
-<title>Mark's Quiz!</title>
+<title>Mark's Quiz</title>
 
 {% endblock %}
 
 {% block body %}
 <div class="container">
   
-<h1>Welcome to Mark's quiz!</h1>
+<h1>Welcome to Mark's Quiz</h1>
 <h2>You have {{num_questions}} questions:</h2>
 </div>
 
