--- a/static/css/main.css
+++ b/static/css/main.css
@@ -9,6 +9,16 @@ body {
   font-family: Calibri, Helvetica, sans-serif;  
 }  
 
+table {
+  width: 100%;
+  border: 2px solid;
+  border-color: black;
+}
+
+th {
+  height: 70px;
+}
+
 table.center {
   margin-left:auto; 
   margin-right:auto;
